--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,17 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
-</head>
-<body>
+<%- include('./partials/header') %> 
     <main class="container">
-        <form action="/sign_in">
+        <form action="/sign_in" method="POST">
             <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
-                <input type="text" class="form-control" id="username" placeholder="e.g. Madam Welminster">
+                <input type="text" class="form-control" name="username" placeholder="e.g. Madam Welminster">
                 <button type="submit" class="btn btn-lg btn-primary" >Sign In</button>
             </div>                  
             
