--- a/views/clucks/index.ejs
+++ b/views/clucks/index.ejs
@@ -1,1 +1,13 @@
-<h1>Index page</h1> 
+<%- include('../partials/header') %> 
+<div>
+    <% for (let cluck of clucks) { %>
+      <div class='card mb-4'>
+        <div class='card-body'>
+          <a href='/clucks/<%= cluck.id %>'>
+            <h5 class='card-title'><%= cluck.username %></h5>
+          </a>
+          <p class='card-text'><%= cluck.content %></p>
+        </div>
+      </div>
+    <% } %>
+  </div>
