--- a/views/clucks/new.ejs
+++ b/views/clucks/new.ejs
@@ -3,11 +3,11 @@
         <form action='/clucks' method='POST'>
             <div class="mb-3">
                 <label for="exampleFormControlTextarea1" class="form-label">Content</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1"placeholder="Whatchoo cluckin' 'bout?" rows="5"></textarea>
+                <textarea class="form-control" id="exampleFormControlTextarea1" name="content" placeholder="Whatchoo cluckin' 'bout?" rows="5"></textarea>
             </div>
             <div class="mb-3">
                 <label for="imager_url" class="form-label">Image Url</label>
-                <input type="url" class="form-control" id="exampleFormControlInput1" placeholder="https://imgur.com/qM6KaEy.gifv">
+                <input type="url" class="form-control" id="exampleFormControlInput1"  name ="image_url" placeholder="https://imgur.com/qM6KaEy.gifv">
             </div>
             <% if (username) { %> 
             <div>
